CustomObjects/objects/invoiceit_s__Product__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>Stores the wide variety of products. To handle &quot;ANY&quot; product easily, the product catalog is formed of 3 tiers. This forms tier 1 of the product catalog.</description>
    <fields>
        <fullName>invoiceit_s__Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <summarizedField>invoiceit_s__Stock_Item__c.invoiceit_s__Available_Quantity__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Stock_Item__c.invoiceit_s__Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Description__c</fullName>
        <description>It will have description of IT Product</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Dispatched_Quantity__c</fullName>
        <label>Dispatched Quantity</label>
        <summarizedField>invoiceit_s__Stock_Item__c.invoiceit_s__Dispatched_Quantity__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Stock_Item__c.invoiceit_s__Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Effective_Period__c</fullName>
        <formula>SUBSTITUTE(text(invoiceit_s__Valid_From_Date__c), &apos;-&apos;, &apos;/&apos;) + &quot; -- &quot; + SUBSTITUTE(text(invoiceit_s__Valid_To_Date__c), &apos;-&apos;, &apos;/&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__No_of_Rate_Plans__c</fullName>
        <label>No. of Rate Plans</label>
        <summaryForeignKey>invoiceit_s__Product_Rate_Plan__c.invoiceit_s__Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Code__c</fullName>
        <description>It will have the product code value</description>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Family__c</fullName>
        <description>This will  have the Family Names Of Product</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <formula>IF(TODAY() &gt;= invoiceit_s__Valid_From_Date__c &amp;&amp; (TODAY() &lt;= invoiceit_s__Valid_To_Date__c || ISBLANK(invoiceit_s__Valid_To_Date__c)), &quot;Active&quot;, IF(invoiceit_s__Valid_From_Date__c &gt; TODAY(), &quot;Future&quot; , &quot;Expired&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Valid_From_Date__c</fullName>
        <description>This will have Valid From Date of Product</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Valid_To_Date__c</fullName>
        <description>This will have the Valid To Date of the Product</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Invoice IT Product</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Product_Code__c</columns>
        <columns>invoiceit_s__Product_Family__c</columns>
        <columns>invoiceit_s__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>invoiceit_s__Valid_From_Date__c</columns>
        <columns>invoiceit_s__Valid_To_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoice IT Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice IT Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>